--- a/form.html
+++ b/form.html
@@ -1,12 +1,10 @@
 
 <div id="mc_embed_signup">
-<form action="//rothys.us7.list-manage.com/subscribe/post?u=142a40c09349b5757c2645b20&amp;id=2c8669926d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+<form action="//rothys.us7.list-manage.com/subscribe/post?u=142a40c09349b5757c2645b20&amp;id=2c8669926d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+	<h2>Subscribe to our mailing list</h2>
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
+	<label for="mce-EMAIL">Email Address </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
 	<div id="mce-responses" class="clear">
@@ -18,5 +16,5 @@
     </div>
 </form>
 </div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
 <!--End mc_embed_signup-->
