--- a/index.html
+++ b/index.html
@@ -2,94 +2,113 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  
-  <title>Rothy's San Francisco</title>
-  
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-  
-  <link rel="stylesheet" href="fonts/font.css">
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  
-  <!--[if lt IE 9]>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Rothy's San Francisco</title>
+
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <!--link rel="stylesheet" href="fonts/font.css"-->
+    <!--link rel="stylesheet" href="css/normalize.min.css"-->
+    <!--link rel="stylesheet" href="css/main.css"-->
+
+    <link rel="stylesheet" href="css/app.css">
+
+    <!--[if lt IE 9]>
   <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
   <![endif]-->
 
 </head>
+
 <body>
-  
-  <!--[if lt IE 7]>
+
+    <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div class="container clearfix">
+    <div class="launch-screen">
+        <div class="screen">
+            <h1 class="logo ir">Rothy's</h1>
+            <h2>Revolutionary Footwear Brand</h2>
+            <p class="message">launching 2015</p>
 
-    <section class="launch-screen">
-      <div class="screen">
-        <h1 class="logo ir">Rothy's</h1>
-        <h2>Revolutionary Footwear Brand</h2>
-        <p class="message">launching 2015</p>
-        
-        <!-- .MailChimp Signup Form -->
-        <div id="mc_embed_signup">
+            <!-- .MailChimp Signup Form -->
+            <div id="mc_embed_signup">
 
-          <form action="//rothys.us7.list-manage.com/subscribe/post?u=142a40c09349b5757c2645b20&amp;id=2c8669926d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <form action="//rothys.us7.list-manage.com/subscribe/post?u=142a40c09349b5757c2645b20&amp;id=2c8669926d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
-            <div id="mc_embed_signup_scroll" class="clearfix">
+                    <div id="mc_embed_signup_scroll" class="clearfix">
 
-              <div class="indicates-required hide">
-                <span class="asterisk">*</span> indicates required
-              </div>
-              
-              <div class="mc-field-group pull-left">
-                <label for="mce-EMAIL" class="hide">Email Address  <span class="asterisk">*</span></label>
-                <input type="email" value="" name="EMAIL" class="field" id="mce-EMAIL" required placeholder="Email Address" />
-              </div>
+                        <div class="indicates-required hide">
+                            <span class="asterisk">*</span>indicates required
+                        </div>
 
-              <div id="mce-responses" class="clear">
-                <div class="response hide" id="mce-error-response"></div>
-                <div class="response hide" id="mce-success-response"></div>
-              </div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div class="mc-field-group pull-left">
+                            <label for="mce-EMAIL" class="hide">Email Address
+                                <span class="asterisk">*</span>
+                            </label>
+                            <input type="email" value="" name="EMAIL" class="field" id="mce-EMAIL" required placeholder="Email Address" />
+                        </div>
 
-              <div style="position: absolute; left: -5000px;">
-                <input type="text" name="b_142a40c09349b5757c2645b20_2c8669926d" tabindex="-1" value="">
-              </div>
+                        <div id="mce-responses" class="clear">
+                            <div class="response hide" id="mce-error-response"></div>
+                            <div class="response hide" id="mce-success-response"></div>
+                        </div>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 
-              <div class="pull-right">
-                <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn" />
-              </div>
+                        <div style="position: absolute; left: -5000px;">
+                            <input type="text" name="b_142a40c09349b5757c2645b20_2c8669926d" tabindex="-1" value="">
+                        </div>
+
+                        <div class="pull-right">
+                            <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn" />
+                        </div>
+
+                    </div>
+
+                </form>
+                <!-- form -->
 
             </div>
+            <!--/.mc_embed_signup-->
+        </div>
+        <!-- /.screen -->
+    </div>
+    <!-- /.launch-screen -->
 
-          </form> <!-- form -->
 
-        </div><!--/.mc_embed_signup-->
-      </div><!-- /.screen -->
-    </section><!-- /.launch-screen -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+    window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.1.min.js"><\/script>')
+    </script>
+    <script src="js/main.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  </div> <!-- /.container -->
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-  <script src="js/main.js"></script>
-      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-55130811-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+    ga('create', 'UA-55130811-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 
 </body>
+
 </html>
