--- a/thankyou.html
+++ b/thankyou.html
@@ -2,62 +2,77 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  
-  <title>Rothy's San Francisco</title>
-  
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-  
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  
-  <!--[if lt IE 9]>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Rothy's San Francisco</title>
+
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <!--link rel="stylesheet" href="fonts/font.css"-->
+    <!--link rel="stylesheet" href="css/normalize.min.css"-->
+    <!--link rel="stylesheet" href="css/main.css"-->
+
+    <link rel="stylesheet" href="css/app.css">
+
+    <!--[if lt IE 9]>
   <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
   <![endif]-->
 
 </head>
+
 <body>
-  
-  <!--[if lt IE 7]>
+
+    <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div class="container clearfix">
+    <div class="launch-screen">
+        <div class="screen">
+            <h1 class="logo ir">Rothy's</h1>
+            <h2>Revolutionary Footwear Brand</h2>
+            <p class="message">launching 2015</p>
 
-    <section class="launch-screen">
-      <div class="screen">
-        <h1 class="logo ir">Rothy's</h1>
-        <h2>Revolutionary Footwear Brand</h2>
-        <p class="message">launching 2015</p>
-        
-        <div class="thank-you">
-          Thank you
+            <div class="thank-you">
+              Thank you
+            </div>
         </div>
+        <!-- /.screen -->
+    </div>
+    <!-- /.launch-screen -->
 
-      </div><!-- /.screen -->
-    </section><!-- /.launch-screen -->
 
-  </div> <!-- /.container -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+    window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.1.min.js"><\/script>')
+    </script>
+    <script src="js/main.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-  <script src="js/main.js"></script>
-      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-55130811-1');ga('send','pageview');
-  </script>
+    ga('create', 'UA-55130811-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 
 </body>
+
 </html>
