--- a/index.html
+++ b/index.html
@@ -81,13 +81,34 @@
     <!-- /.launch-screen -->
 
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
-    window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.1.min.js"><\/script>')
-    </script>
-    <script src="js/main.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
+
+    jQuery(document).ready(function(){
+       jQuery('#mce-EMAIL').on('focusout', function(){
+           if( ! check_email( jQuery(this).val() ) ) {
+               alert("invalid email");
+           }
+       });
+
+       jQuery('form').submit( function(e){
+           if( ! check_email( jQuery('#mce-EMAIL').val() ) ) {
+               e.preventDefault();
+               alert("invalid email");
+           }
+       });
+
+       check_email = function(email) {
+           var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+           if( regex.test( email ) ) {
+               return true;
+           }
+
+           return false;
+       }
+   });
+
+
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
