update favicon and meta tags

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <title>Rothy's San Francisco</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
+    <meta name="keywords" content="rothy's, rothys, footwear, shoes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>Rothy's San Francisco - Footwear and  Shoes</title>
+
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
 
     <!--link rel="stylesheet" href="fonts/font.css"-->
     <!--link rel="stylesheet" href="css/normalize.min.css"-->
