--- a/thankyou.html
+++ b/thankyou.html
@@ -8,12 +8,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <title>Rothy's San Francisco</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
+    <meta name="keywords" content="rothy's, rothys, footwear, shoes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Rothy's San Francisco - Footwear and  Shoes</title>
+
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
