--- a/thankyou.html
+++ b/thankyou.html
@@ -9,9 +9,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="rothy's, rothys, footwear, shoes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="3d Knit Shoes. Built in the USA. Lauching 2015."> 
+    <meta name="keywords" content="rothy's, rothys, footwear, shoes, 3d, knitshoes, ballerina, comfortable, green, flatknit"> 
 
     <title>Rothy's San Francisco - Footwear and  Shoes</title>
 
