Update the splash page css and meta tags

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="description" content="3d Knit Shoes. Built in the USA. Lauching 2015."> 
-    <meta name="keywords" content="rothy's, rothys, footwear, shoes, 3d, knitshoes, ballerina, comfortable, green, flatknit"> 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Rothy's. Launching 2015." /> 
     <title>Rothy's San Francisco - Footwear and  Shoes</title>
-
-
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
 
@@ -32,7 +28,6 @@
 </head>
 
 <body>
-
     <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -40,9 +35,8 @@
     <div class="launch-screen">
         <div class="screen">
             <h1 class="logo ir">Rothy's</h1>
-            <h2>Revolutionary Footwear Brand</h2>
-            <p class="message">launching 2015</p>
-
+            <p class="message">Launching 2015</p>
+            <h2>REVOLUTIONARY<br/>FOOTWEAR BRAND</h2>
             <!-- .MailChimp Signup Form -->
             <div id="mc_embed_signup">
 
@@ -77,6 +71,9 @@
 
             </div>
             <!--/.mc_embed_signup-->
+            <div class="social">
+              <a href="#"><img src="images/instaicon.png"></a>
+            </div>
         </div>
         <!-- /.screen -->
     </div>
