--- a/thankyou.html
+++ b/thankyou.html
@@ -39,9 +39,8 @@
     <div class="launch-screen">
         <div class="screen">
             <h1 class="logo ir">Rothy's</h1>
-            <h2>Revolutionary Footwear Brand</h2>
             <p class="message">launching 2015</p>
-
+            <h2>Revolutionary <br/>Footwear Brand</h2>
             <div class="thank-you">
               Thank you
             </div>
